# 4Dmeanfilter

./: CMakeLists.txt  Meanfilter4D.cpp  Meanfilter4D.h  README.md  ThreadManager.cpp  ThreadManager.h  build.cmake  env.cmake  kernel.cu  kernel.h  meanfilter.cpp  meanfilter.h
